--- a/STYLES/styles.css
+++ b/STYLES/styles.css
@@ -1,45 +1,48 @@
+
 h1 {
     color: purple;
   }
+
   p {
     color: red;
   }
+
   body {
     background-color: dodgerblue;
   }
   .purple-text {
-     color: purple;
+     color: hsla(240, 0, 0, .5);
   }
   .important {
     font-weight:bold;
   }
-  #lead-paragraph {
-    color: purple; font-weight: bold;
-  }
   .important:hover {
     background-color:pink;
   }
-  p.important {
-    width: 75%;
+  #lead-paragraph {
+    color: purple;
+    font-weight: bold;
   }
-
-  a[href="https://www.imagecomics.com/"] {
-    background-color: orange;
+  a[href="https://imagecomics.com/"] {
     padding: 1rem;
+    background-color: orange;
   }
   a[href="http://storm.wnba.com/"] {
-    background-color: blue;
+    background-color: #;
   }
   h1 {
     color: red;
     border-style: solid;
-    border-width: 1px;
+    border-width: 1 px;
     border-color: red;
   }
+  p.important {
+    width: 75%;
+}
 
   img {
     border-style: dashed;
     border-color: orange;
     border-width: 3px;
-    width:25%;
+    width: 25%;
   }
