--- a/STYLES/styles.css
+++ b/STYLES/styles.css
@@ -1,4 +1,3 @@
-
 h1 {
     color: purple;
   }
@@ -23,26 +22,29 @@ h1 {
     color: purple;
     font-weight: bold;
   }
-  a[href="https://imagecomics.com/"] {
-    padding: 1rem;
-    background-color: orange;
-  }
-  a[href="http://storm.wnba.com/"] {
-    background-color: #;
-  }
+
+
   h1 {
     color: red;
     border-style: solid;
     border-width: 1 px;
     border-color: red;
   }
+
   p.important {
     width: 75%;
 }
 
   img {
-    border-style: dashed;
-    border-color: orange;
-    border-width: 3px;
+    border-style: solid;
+    border-color: black;
+    border-width: 5px;
     width: 25%;
-  }
+    }
+
+  .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 35%;
+   }
