--- a/STYLES/styles.css
+++ b/STYLES/styles.css
@@ -27,8 +27,8 @@ h1 {
   h1 {
     color: red;
     border-style: solid;
-    border-width: 1 px;
-    border-color: red;
+    border-width: 5px;
+    border-color: gray;
   }
 
   p.important {
