--- a/STYLES/styles.css
+++ b/STYLES/styles.css
@@ -10,7 +10,7 @@ h1 {
     background-color: dodgerblue;
   }
   p {
-     color: gray;
+     color: white;
   }
   .important {
     font-weight:bold;
