--- a/STYLES/styles-mock.css
+++ b/STYLES/styles-mock.css
@@ -16,7 +16,7 @@
 
 header {
   height:6%;
-  background-color:purple;
+  background-color:aqua;
   color:white;
   /*margin-left:13%;*/
   padding:3% 13%;
