--- a/STYLES/no5-Styles-mock.css
+++ b/STYLES/no5-Styles-mock.css
@@ -1,28 +1,20 @@
-<!--This is my styling sheet  portion-->
+/*This is my styling sheet  portion*/
 
 
-<!--*{box-sizing:border-box;}-->
-
-<!--add the flex boxes-->
-
-background-color: lightgrey;
-  width: 300px;
-  border: 25px solid green;
-  padding: 25px;
-  margin: 25px;
 
 
-  
+
+
+
 
 .box{
-  height: 800px;
-  width:450px;
+  height: 600px;
+  width:200px;
   border:5px solid purple;
   background: lightgrey;
   padding: 25px;
   margin: 25px
 }
-
 
 .container{
   display: flex;
@@ -31,10 +23,11 @@ background-color: lightgrey;
   flex-direction:row;
   flex-wrap:nowrap;
   justify-content:center;
-  alignn-items:center;
+  alignn-items:left;
 
 }
--->
+
+
 
  .flip {
    height:8rem;
@@ -51,7 +44,7 @@ header {
   height:6%;
   background-color:gray;
   color:white;
-  <!--margin-left:13%-->
+  /*margin-left:13%;*/
   padding:3% 13%;
 }
 
