update 07-styles css file

--- a/lesson07/07-styles.css
+++ b/lesson07/07-styles.css
@@ -30,4 +30,10 @@ p {
   font-weight: 200;
   font-size: 17px
 }
+
+.footer {
+  font-family: Arial, serif;
+  font-weight: 200;
+  font-size: 8px
+}
 /**TEXT definition**/
