--- a/lesson07/07-styles.css
+++ b/lesson07/07-styles.css
@@ -25,11 +25,21 @@ body {
   font-size: 17px
 }
 
+/*margin for paragraph*/
 p {
   font-family: Arial, serif;
   font-weight: 200;
   font-size: 17px
 }
+p {
+margin-top: 50px;
+margin-bottom: 10x;
+margin-right: 10px;
+margin-left: 10px;
+align-items: center;
+}
+
+
 
 .footer {
   font-family: Arial, serif;
@@ -40,3 +50,37 @@ p {
 section:hover {
   border: 3px solid red;
 }
+
+<style>
+ .box{
+ height: 250px;
+ width:450px;
+ border:rgb(68,68,68);
+ /*
+ background: lightgrey;*/
+ background: rgb(236,183,34);
+ padding: 25px;
+ margin: 10px
+ }
+
+ .container{
+   display: flex;
+   height:350px;
+   background-color:rgb(236,183,34);
+   flex-direction:row;
+   flex-wrap:nowrap;
+   justify-content:space-evenly;
+   margin-bottom: 25px;
+   align-items: center;
+ }
+/* try this section hover*/
+ section:hover {
+   border: 3px solid gray;
+   background-color:rgb(236,183,34);
+   }
+
+
+
+
+
+</style>
