--- a/lesson08/styles.css
+++ b/lesson08/styles.css
@@ -43,7 +43,16 @@ align-items: center;
 .footer {
   font-family: Arial, serif;
   font-weight: 200;
-  font-size: 8px
+  font-size: 2px
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+
+
+
 }
 /**TEXT definition**/
 section:hover {
@@ -106,15 +115,78 @@ section:hover {
       background-color:rgb(236,183,34);
       }
 
-/* try this section hover*/
+
 
 /*margin for paragraph*/
 p {
 margin-top: 50px;
-/*
-margin-bottom: 10x;
-*/
 margin-right: 10px;
 margin-left: 10px;
 align-items: center;
+}
+
+/* try this section for grid*/
+* {
+    box-sizing: border-box;
+}
+
+.col {
+    float: left;
+    padding: 5px;
+    border: 1px solid red;
+
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.span_1_of_12 {
+  width: 8.33%;
+}
+
+.span_2_of_12 {
+  width: 16.66%;
+}
+
+.span_3_of_12 {
+  width: 25%;
+}
+
+.span_4_of_12 {
+  width: 33.33%;
+}
+
+.span_5_of_12 {
+  width: 41.66%;
+}
+
+.span_6_of_12 {
+  width: 50%;
+}
+
+.span_7_of_12 {
+  width: 58.33%;
+}
+
+.span_8_of_12 {
+  width: 66.66%;
+}
+
+.span_9_of_12 {
+  width: 75%;
+}
+
+.span_10_of_12 {
+  width: 83.33%;
+}
+
+.span_11_of_12 {
+  width: 91.66%;
+}
+
+.span_12_of_12 {
+  width: 100%;
 }
